Added command line options for accessing DDS contents.